[package]
name = "swapct"
version = "0.1.0"
authors = ["SwapCT Authors"]
edition = "2018"

[dependencies]
curve25519-dalek = { version = "3", features = ["serde"]}
rand = {version = "0.7.3"}
serde = { version = "1.0.101", features = ["derive"], default-features = false}
sha3 = {version = "0.9.1", default-features = false}
# merlin ={ version = "2.0.0", default-features = false}
#rayon = {version = "1.5.0" }
#byteorder = {version = "1", default-features = false}
# aes-gcm-siv = "0.9.0"
# hmac = "0.10.1"
# bytes = "0.5.6"
# serde_cbor = "0.11.1"
#serde_json = "1.0.59"
#structopt = {version = "0.3.20"}
#indicatif = {version = "0.15.0"}
